agregando imagenes mueco, y posicionado los objetos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Encriptador</title>
 </head>
 <body>
-    <img class="logo"src="imagenes/Logo.png" alt="logo">
+
+        <img class="logo"src="imagenes/Logo.png" alt="logo">
+        <div class="caja-muñeco">
+            <img class="muneco" src="imagenes/Muñeco.png" alt="muneco">
+        </div>
+        <input class="escribe" type="text" placeholder="Ingrese el texto aqui">
 </body>
 </html>
