focus en el input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <img class="logo"src="imagenes/Logo.png" alt="logo">
-        <input class="input" type="text" placeholder="Ingrese el texto aqui">
+        <input autofocus class="input" type="text" placeholder="Ingrese el texto aqui">
 
         <div class="caja-encriptador">
             <div class="caja-resultado"id="caja-resultado">
