--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         
                     <div id="container-texto-inicial" class="texto" >
                 
-                                <img id="muneco"class="muneco" src="imagenes/Muñeco.png" alt="muneco">
+                                <img id="muneco"class="muneco" src="imagenes/muneco.png" alt="muneco">
                                 <h2 id="ningun-mensaje"class="ningun-mensaje">Ningún mensaje fue encontrado</h2>
                                 <h3 id="ingresa-texto"class="ingresa-texto">Ingresa el texto que desees encriptar o desencriptar.</h3>
 
